syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.iainrauch.apibenchmark.grpc";
option java_outer_classname = "UsersProto";
option objc_class_prefix = "HLW";

package apibenchmark;

service Users {
    rpc GetUser (GetUserRequest) returns (UserReply) {
    }
}

message GetUserRequest {
    string id = 1;
}

message UserReply {
    string id = 1;
    bytes data = 2;
    int64 counter = 3;
}